[gd_scene load_steps=30 format=3 uid="uid://hy34nyu65vhi"]

[ext_resource type="Script" path="res://player.gd" id="1_aqxcj"]
[ext_resource type="PackedScene" uid="uid://caapb57ek3joo" path="res://bullet.tscn" id="2_jjn3i"]
[ext_resource type="Texture2D" uid="uid://sjsftmm1lf5a" path="res://SOunds/PlayerIdle1.png" id="2_khbwi"]
[ext_resource type="Texture2D" uid="uid://bjfury6uwtubd" path="res://SOunds/PlayerIdle2.png" id="3_74odq"]
[ext_resource type="Texture2D" uid="uid://dcg51qgiurdu6" path="res://ImagesForGame/Playerdeath6.PNG" id="3_i0u3r"]
[ext_resource type="Texture2D" uid="uid://dn41x4detkdqc" path="res://SOunds/PlayerRun1.png" id="3_jee7c"]
[ext_resource type="Texture2D" uid="uid://c4rlma12d5sg" path="res://ImagesForGame/playerdeath1.PNG" id="3_lauoj"]
[ext_resource type="Texture2D" uid="uid://c5msf58gwtgms" path="res://SOunds/PlayerRun2.png" id="4_av4f6"]
[ext_resource type="Texture2D" uid="uid://jy44w8vbmotk" path="res://ImagesForGame/playerdeath2.PNG" id="4_esfxw"]
[ext_resource type="Texture2D" uid="uid://kdbr57pd6r4" path="res://SOunds/PlayerIdle3.png" id="4_jxdf6"]
[ext_resource type="Texture2D" uid="uid://cgg52jofikusg" path="res://ImagesForGame/playerdeath7.PNG" id="4_qvnam"]
[ext_resource type="Texture2D" uid="uid://cv422620o2773" path="res://SOunds/PlayerJump.PNG" id="5_6s7ax"]
[ext_resource type="Texture2D" uid="uid://bupl2oicbibwv" path="res://ImagesForGame/playerdeath3.PNG" id="5_7prgu"]
[ext_resource type="Texture2D" uid="uid://3mu1an0rpafb" path="res://ImagesForGame/Playerdeath8.PNG" id="5_alko1"]
[ext_resource type="Texture2D" uid="uid://rxeqbvib2r8l" path="res://SOunds/PlayerRun3.png" id="5_ip11l"]
[ext_resource type="Texture2D" uid="uid://beyk6l4jnxoyf" path="res://SOunds/PlayerRun4.PNG" id="6_h6yid"]
[ext_resource type="Texture2D" uid="uid://cb5xv5a2ivbts" path="res://ImagesForGame/playerdeath4.PNG" id="6_m38qc"]
[ext_resource type="Texture2D" uid="uid://rl4ox07yfpuv" path="res://ImagesForGame/Playerdeath9.PNG" id="6_v0git"]
[ext_resource type="Texture2D" uid="uid://dmk8v0j5dg4rh" path="res://ImagesForGame/Playerdeath5.PNG" id="7_agfjp"]
[ext_resource type="Texture2D" uid="uid://ba5bwx5n35yq5" path="res://ImagesForGame/Playerdeath10.PNG" id="7_fexd0"]
[ext_resource type="Texture2D" uid="uid://c8858ncy8tga0" path="res://ImagesForGame/PlayerDeath11.PNG" id="8_35t0f"]
[ext_resource type="Texture2D" uid="uid://c133vn2vexg2b" path="res://ImagesForGame/Playerdeath12.PNG" id="9_kdxgr"]
[ext_resource type="AudioStream" uid="uid://b8s5byi3u7al3" path="res://SOunds/BAZINGA1.wav" id="11_dofsb"]
[ext_resource type="AudioStream" uid="uid://rrlkrxqvfha8" path="res://SOunds/BAZINGA12.wav" id="12_s1uhh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5krrx"]
radius = 23.0
height = 104.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rbe0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_i0u3r")
}, {
"duration": 1.0,
"texture": ExtResource("4_qvnam")
}, {
"duration": 1.0,
"texture": ExtResource("5_alko1")
}, {
"duration": 1.0,
"texture": ExtResource("6_v0git")
}, {
"duration": 1.0,
"texture": ExtResource("7_fexd0")
}, {
"duration": 1.0,
"texture": ExtResource("8_35t0f")
}, {
"duration": 1.0,
"texture": ExtResource("9_kdxgr")
}, {
"duration": 1.0,
"texture": ExtResource("3_lauoj")
}, {
"duration": 1.0,
"texture": ExtResource("4_esfxw")
}, {
"duration": 1.0,
"texture": ExtResource("5_7prgu")
}, {
"duration": 1.0,
"texture": ExtResource("6_m38qc")
}, {
"duration": 1.0,
"texture": ExtResource("7_agfjp")
}],
"loop": false,
"name": &"Death",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_khbwi")
}, {
"duration": 1.0,
"texture": ExtResource("3_74odq")
}, {
"duration": 1.0,
"texture": ExtResource("4_jxdf6")
}, {
"duration": 1.0,
"texture": ExtResource("3_74odq")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_6s7ax")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jee7c")
}, {
"duration": 1.0,
"texture": ExtResource("4_av4f6")
}, {
"duration": 1.0,
"texture": ExtResource("5_ip11l")
}, {
"duration": 1.0,
"texture": ExtResource("6_h6yid")
}],
"loop": true,
"name": &"Run",
"speed": 9.0
}]

[sub_resource type="Gradient" id="Gradient_pghma"]
offsets = PackedFloat32Array(0.012987, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wdf8u"]
gradient = SubResource("Gradient_pghma")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.857798, 0.137615)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o58qf"]
radius = 27.0
height = 108.0

[node name="Player" type="CharacterBody2D"]
z_index = -1
collision_layer = 15
collision_mask = 15
floor_stop_on_slope = false
script = ExtResource("1_aqxcj")
bullet_scene = ExtResource("2_jjn3i")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -2)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_5krrx")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -60)
zoom = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rbe0q")
animation = &"Idle"

[node name="RayCast2D" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 3)
rotation = -1.5708
scale = Vector2(69.1744, 1.04002)
target_position = Vector2(-0.000112534, 31)

[node name="bullet_spawn" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(43, -14)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(5, -38)
scale = Vector2(9.60938, 8.20313)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = SubResource("GradientTexture2D_wdf8u")

[node name="Area2D" type="Area2D" parent="."]
metadata/Player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_o58qf")

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Wall_jump" type="Timer" parent="."]

[node name="Shoot_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Jump_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_dofsb")
pitch_scale = 4.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_s1uhh")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[connection signal="area_entered" from="Area2D" to="." method="_camera_zoom"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_normal"]
[connection signal="area_entered" from="Area2D" to="." method="_Boss_fight"]
[connection signal="area_entered" from="Area2D" to="." method="_to_level_3"]
[connection signal="area_entered" from="Area2D" to="." method="_door"]
[connection signal="area_entered" from="Area2D" to="." method="_to_level_2"]
[connection signal="area_entered" from="Area2D" to="." method="_spikes"]
[connection signal="area_entered" from="Area2D" to="." method="_trigger"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Dash_timer" to="." method="_Dash_Time"]
[connection signal="timeout" from="Wall_jump" to="." method="_wall_jump"]
[connection signal="timeout" from="Shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Jump_timer" to="." method="_on_jump_timer_timeout"]
